--- a/css/default.css
+++ b/css/default.css
@@ -75,7 +75,7 @@ a:hover {
 }
 
 .container > header nav a:after {
-	content: attr(data-info);
+	/*content: attr(data-info);*/
 	color: #fff;
 	position: absolute;
 	width: 600%;
