--- a/css/component.css
+++ b/css/component.css
@@ -31,14 +31,33 @@ header{
     margin: 0 auto;
 }
 
+#menu{
+    position: fixed;
+    top: 150px;
+    left: 50px;
+    z-index: 1000;
+}
+
+#menu nav{
+    width: 200px;
+}
+
+#menu a{
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+    display: block;
+    background-color: cadetblue;
+}
 /* The nav is fixed on the right side  and we center it by translating it 50% 
 (we don't know it's height so we can't use the negative margin trick) */
 .cbp-fbscroller > nav {
 	position: fixed;
-	z-index: 9999;
-	right: 100px;
-	top: 50%;
-	width: 26px;
+	z-index: 9999;	
+    top: 50%;
+	width: 250px;
+    
+	/*width: 26px;right: 100px;*/
 	-webkit-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
@@ -46,16 +65,18 @@ header{
 }
 
 .cbp-fbscroller > nav a {
-	display: block;
-	position: relative;
-	z-index: 9999;
+	/*display: block;	
 	color: transparent;
 	width: 26px;
 	height: 26px;
 	outline: none;
 	margin: 25px 0;
 	border-radius: 50%;
-	border: 4px solid #fff;
+	border: 4px solid #fff;*/
+    position: relative;
+	z-index: 9999;
+    padding: 5px;
+    display: block;
 }
 
 .no-touch .cbp-fbscroller > nav a:hover {
