--- a/css/default.css
+++ b/css/default.css
@@ -33,11 +33,11 @@ a:hover {
 }
 
 .container > header {
-	padding: 2.875em 1.875em 1.875em;
+	/*padding: 2.875em 1.875em 1.875em;width: 60%;left: 20%;*/
 	position: fixed;
-	z-index: 1000;
-	width: 60%;
-	left: 20%;
+	z-index: 1000;	
+    width: 100%;
+	
 }
 
 .container > header h1 {
