--- a/css/default.css
+++ b/css/default.css
@@ -66,7 +66,8 @@ a:hover {
 	position: relative;
 	width: 2.5em;
 	height: 2.5em;
-	background: #fff;
+	/*background: #fff;*/
+    background-image: url(../images/tabs_menu.png);
 	border-radius: 50%;
 	color: transparent;
 	margin: 0 0.1em;
