--- a/css/component_old.css
+++ b/css/component_old.css
@@ -34,22 +34,22 @@ header{
 
 /* The nav is fixed on the right side  and we center it by translating it 50% 
 (we don't know it's height so we can't use the negative margin trick) */
-.cbp-fbscroller > #menu > nav {
-	
+.cbp-fbscroller > nav {
+	position: fixed;
+	z-index: 9999;	
+    top: 50%;
 	width: 250px;
     background-color: cadetblue;
-   /* border-top-right-radius: 10px; 
+    border-top-right-radius: 10px; 
     border-bottom-right-radius: 10px;
-	width: 26px;right: 100px;
+	/*width: 26px;right: 100px;*/
 	-webkit-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);position: fixed;
-	z-index: 9999;	
-    top: 50%;*/
+	transform: translateY(-50%);
 }
 
-.cbp-fbscroller > #menu > nav a {
+.cbp-fbscroller > nav a {
 	/*display: block;	
 	color: transparent;
 	width: 26px;
@@ -60,18 +60,11 @@ header{
 	border: 4px solid #fff;*/
     position: relative;
 	z-index: 9999;
-    padding: 5px 20px;
+    padding: 5px;
     display: block;
-    text-align: center;
-}
-#menu{
-    position: fixed;
-    top: 200px;
-    width: 250px;
-    z-index: 1000;
 }
 
-.menu{   
+nav .menu{   
     height: 50px;
    /* background-color: cadetblue;*/
 }
@@ -81,18 +74,16 @@ header{
     border-top-right-radius: 10px;
     background-image: url(../images/header_menu.png);
 }
-section > a{
-    
-}
+
 #footer_menu{  
     border-bottom-right-radius: 10px;        
     background-image: url(../images/footer_menu.png);
 }
-.no-touch .cbp-fbscroller > #menu > nav a:hover {
+.no-touch .cbp-fbscroller > nav a:hover {
 	background: rgba(255,255,255,0.6);
 }
 
-.cbp-fbscroller > #menu > nav a.cbp-fbcurrent {
+.cbp-fbscroller > nav a.cbp-fbcurrent {
 	background: rgb(156, 120, 120);
 }
 
