--- a/css/jquery-ui-1.10.3.custom.css
+++ b/css/jquery-ui-1.10.3.custom.css
@@ -22,7 +22,8 @@
     height: 100%;
     width: 100%;
     background-color: #FFF;
-    opacity: .4;   
+    opacity: .4;  
+    z-index: -1; 
 }
 #contenido_dialog{
     margin: 0 auto;
