--- a/css/jquery-ui-1.10.3.custom.css
+++ b/css/jquery-ui-1.10.3.custom.css
@@ -29,6 +29,7 @@
     margin: 0 auto;
     height: 600px;
     width: 1000px; 
+    padding-top: 100px;
     background-color: black; 
     background-image: url(../images/header2.jpg);
     
