--- a/css/component.css
+++ b/css/component.css
@@ -40,8 +40,10 @@ header{
 	height: 85px;
 	width: 250px;
     overflow: hidden;
-    background-color: cadetblue;
-   /* border-top-right-radius: 10px; 
+    background-color: #f9f5f1;
+    
+    /*background-image: url(../images/header2.jpg);
+    border-top-right-radius: 10px; 
     border-bottom-right-radius: 10px;
 	width: 26px;right: 100px;
 	-webkit-transform: translateY(-50%);
@@ -63,9 +65,10 @@ header{
 	border: 4px solid #fff;*/
     position: relative;
 	z-index: 9999;
-    padding: 5px 20px;
+    padding: 6px 20px;
     display: block;
     text-align: center;
+    color: #111;
 }
 #menu{
     position: fixed;
@@ -78,27 +81,39 @@ header{
     height: 50px;
    /* background-color: cadetblue;*/
 }
+.perfil{
+    height: 64px;
+    width: 193px;
+    background-image: url(../images/verperfil.png);
+}
 .flecha_menu{
-    background-color: cadetblue;
+    padding: 5px 20px;
+    height: 30px;
+    color: #111;
+    background-color: #f9f5f1;
     cursor: pointer;
     text-align: center;
 }
-#header_menu{   
-    
+.flecha_menu:hover{   
+    background: #5fb0ab; 
+}
+#header_menu{       
+    height: 20px;
     border-top-right-radius: 10px;
     background-image: url(../images/header_menu.png);
 }
 section > a{
     position: absolute;
-    margin: 200px 300px;    
+    margin: 500px 800px;    
 }
 
 #footer_menu{  
+    height: 20px;
     border-bottom-right-radius: 10px;        
     background-image: url(../images/footer_menu.png);
 }
 .no-touch .cbp-fbscroller > #menu > nav a:hover {
-	background: rgba(255,255,255,0.6);
+	background: #5fb0ab;
 }
 
 .cbp-fbscroller > #menu > nav a.cbp-fbcurrent {
@@ -110,15 +125,24 @@ section > a{
 	position: relative;
 	background-position: top center;
 	background-repeat: no-repeat;
-	background-size: cover;
+	/*background-size: cover;*/
 }
 
 .no-touch .cbp-fbscroller section {
 	background-attachment: fixed;
 }
-
+.contenido_seccion{
+    background-image: url(../images/circulo.png);
+    background-size: cover;
+    height: 400px;
+    width: 400px;
+    margin: 200px 35%;
+    position: absolute;
+    z-index: 900;
+}
 #fbsection1 {
-	background-image: url(../images/img1.jpg);
+	background-image: url(../images/patron_azul.png);
+    background-repeat: repeat;
 }
 
 #fbsection2 {
