--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,6 @@
 /* General Blueprint Style */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Merienda);
 @font-face {
 	font-family: 'fontawesome';
 	src:url('../fonts/fontawesome.eot');
@@ -19,29 +20,28 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #fff;
+    /*font-family: 'Lato', Calibri, Arial, sans-serif;*/
+    font-family: 'Merienda', cursive;
+    font-size: small;
+    font-weight: bold;
+    color: #000;
 }
 
 a {
-	color: #f0f0f0;
+    font-size: 14px;
+    color:  #89c8cc;
 	text-decoration: none;
+    list-style-type: none;
 }
 
-a:hover {
-	color: #000;
-}
-
-.container > header {
-	/*padding: 2.875em 1.875em 1.875em;width: 60%;left: 20%;*/
+.container > header {	
 	position: fixed;
 	z-index: 1000;	
-    width: 100%;
-	
+    width: 100%;	
 }
 
 .container > header h1 {
-	font-size: 2.125em;
+	font-size: 14px;
 	line-height: 1.3;
 	margin: 0;
 	float: left;
@@ -55,29 +55,30 @@ a:hover {
 	letter-spacing: 0.5em;
 	padding: 0 0 0.6em 0.1em;
 }
-
 .container > header nav {
-	float: right;
+    float: left;
+    width: 35%;
+    height: 30px !important;
+    padding-top: 110px;
 }
-
+/*
 .container > header nav a {
 	display: block;
 	float: left;
 	position: relative;
 	width: 2.5em;
 	height: 2.5em;
-	/*background: #fff;*/
     background-image: url(../images/tabs_menu.png);
 	border-radius: 50%;
 	color: transparent;
 	margin: 0 0.1em;
 	border: 4px solid #fff;
 	text-indent: -8000px;
-}
+}*/
 
 .container > header nav a:after {
 	/*content: attr(data-info);*/
-	color: #fff;
+	color: #000;
 	position: absolute;
 	width: 600%;
 	top: 120%;
@@ -87,6 +88,15 @@ a:hover {
 	pointer-events: none;
 }
 
+.container > header nav li{
+    float: left;
+    padding-right: 25px;
+    list-style-type: none;
+}
+
+.container > header nav:first-of-type li{
+    float: right;    
+}
 .container > header nav a:hover:after {
 	opacity: 1;
 }
