--- a/css/default.css
+++ b/css/default.css
@@ -108,7 +108,7 @@ a {
 	color:  #89c8cc;
 }*/
 .container > header nav a:hover {	
-    color: #0b878b;
+    color:  #ffba76;
 }
 
 .icon-drop:before, 
