--- a/css/component.css
+++ b/css/component.css
@@ -9,8 +9,7 @@ html, body,
 button{
     cursor: pointer;
 }
-header{
-    
+header{    
     background-color: #808080;
     background-image: url(../images/header2.jpg);
     background-repeat: repeat-x;
@@ -37,8 +36,23 @@ header{
     width:30%;    
     float: left;
 }
-
-
+#contenido_destino {   
+    float: left;
+    width: 50%;
+    overflow: auto;
+    max-height: 350px;
+}
+#imagen_destino{
+    float: right;
+    width: 50%;
+}
+#tab1{
+    height: 350px;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
 /* The nav is fixed on the right side  and we center it by translating it 50% 
 (we don't know it's height so we can't use the negative margin trick) */
 .cbp-fbscroller > #menu > nav {
