--- a/css/jquery-ui-1.10.3.custom.css
+++ b/css/jquery-ui-1.10.3.custom.css
@@ -880,7 +880,7 @@ button.ui-button::-moz-focus-inner {
 	cursor: pointer;
 }
 .ui-tabs .ui-tabs-panel {
-	display: block;
+	/*display: block;*/
 	border-width: 0;
 	padding: 1em 1.4em;
 	background: none;
