--- a/css/component.css
+++ b/css/component.css
@@ -259,3 +259,17 @@ img{
 	background-image: url(../images/img6.jpg);
 }
 
+#fbsection7 {
+	background-image: url(../images/img7.jpg);
+}
+
+#fbsection8 {
+	background-image: url(../images/img8.jpg);
+}
+
+#fbsection9 {
+	background-image: url(../images/img9.jpg);
+}
+
+
+
