Agregando mas destinos

--- a/css/component.css
+++ b/css/component.css
@@ -159,7 +159,7 @@ img{
 .cbp-fbscroller section {
 	position: relative;
 	background-position: top center;
-	background-repeat: no-repeat;
+	/*background-repeat: no-repeat;*/
 	background-size: cover;
 }
 
