--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
-/* General Blueprint Style 
+/* General Blueprint Style */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@import url(http://fonts.googleapis.com/css?family=Merienda);*/
+@import url(http://fonts.googleapis.com/css?family=Merienda);
 @font-face {
 	font-family: 'fontawesome';
 	src:url('../fonts/fontawesome.eot');
@@ -21,7 +21,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
     /*font-family: 'Lato', Calibri, Arial, sans-serif;*/
-    font-family: 'Arial', cursive;
+    font-family: 'Merienda', cursive;
     font-size: small;
     font-weight: bold;
     color: #000;
