--- a/css/default.css
+++ b/css/default.css
@@ -1,13 +1,23 @@
 /* General Blueprint Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@import url(http://fonts.googleapis.com/css?family=Merienda);
-@font-face {
+/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Merienda);*/
+/*@font-face {
 	font-family: 'fontawesome';
 	src:url('../fonts/fontawesome.eot');
 	src:url('../fonts/fontawesome.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/fontawesome.svg#fontawesome') format('svg'),
 		url('../fonts/fontawesome.woff') format('woff'),
 		url('../fonts/fontawesome.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}*/
+
+@font-face {
+	font-family: 'war_zone';
+	src:url('../fonts/War_Zone_97.eot');
+	src:url('../fonts/War_Zone_97.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/War_Zone_97.svg#War_Zone_97') format('svg'),		
+		url('../fonts/War_Zone_97.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -21,7 +31,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
     /*font-family: 'Lato', Calibri, Arial, sans-serif;*/
-    font-family: 'Merienda', cursive;
+    font-family: 'War_Zone_97', cursive;
     font-size: small;
     font-weight: bold;
     color: #000;
