Integraando el contacto

--- a/css/default.css
+++ b/css/default.css
@@ -13,7 +13,7 @@
 }*/
 
 @font-face {
-	font-family: 'war_zone';
+	font-family: 'War_Zone_97';
 	src:url('../fonts/War_Zone_97.eot');
 	src:url('../fonts/War_Zone_97.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/War_Zone_97.svg#War_Zone_97') format('svg'),		
