--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,6 +1,14 @@
 body {
+    background-image: url(../images/fondoAzul.jpg);
+    overflow: hidden;
+    color: #fff;    
 }
 
+#btnEnviar {
+    width: 100%;
+    text-align: center;
+    border: none;
+}
 #cuerpo {
     margin: 0 auto;
     width: 800px;
@@ -8,19 +16,49 @@ body {
 }
 
 #contacto {
-    padding-top: 250px;
+    padding-top: 200px;
     width: 100%;
     height: 100%;
 }
 
-#datos_contacto {
-    width: 50%;
+#datos_contacto {   
+    width: 100%;
     height: 100%;
+    padding-left: 15px;
+    text-align: center;
 }
 
 
 #formulario {
-    height: 100px;
+    margin-top: -10px;
+    height: 250px;
+    width: 55%;
+    float: right;
+}
+
+[type = text], textarea{
+    padding: 2px;
+    border: 2px solid #3399cc;
+    background-color: transparent;
+}
+
+table {    
+    width: 425px;
+    height: 250px;
+    float: right;
+    /*background-color: #fff;*/
+    background-image: url(../images/fondoFormulario.jpg);
+    background-size: 425px 250px;
+}
+
+#img_contacto {  
+    width: 350px;
+    float: left;
+    height: 250px;
+    background-image: url(../images/pantallaso.jpg);
+}
+td {
+    padding: 5px 10px;
 }
 
 
