--- a/css/contacto.css
+++ b/css/contacto.css
@@ -47,7 +47,7 @@ table {
     height: 250px;
     float: right;
     /*background-color: #fff;*/
-    background-image: url(../images/fondoFormulario.jpg);
+    background-image: url(../images/fondoFormulario.png);
     background-size: 425px 250px;
 }
 
