Finalizando cambios de decamerun

--- a/css/component.css
+++ b/css/component.css
@@ -272,3 +272,30 @@ img{
 
 */
 
+/* DECAMERUN*/
+.body_decamerun {
+    background-image: url(../images/patron_rojo.jpg);
+}
+
+#imagen_centrada{
+    margin: 0 auto;  
+}
+
+p{
+    text-align: justify;    
+}
+
+/*.img_movil {
+    background-image: url(../images/fondoFormulario.png)
+}*/
+
+#contenido{
+     background-image: url(../images/fondoFormulario.png);
+     background-repeat: no-repeat;
+     background-size: cover;
+}
+
+#img{
+    width: 325px;
+    margin: 0 auto;
+}
