--- a/css/component.css
+++ b/css/component.css
@@ -245,9 +245,10 @@ h3{
 }
 
 #contenido{
-     background-image: url(../images/fondoFormulario.png);
+     background-image: url(../images/fondoFormulario2.png);
      background-repeat: no-repeat;
-     background-size: cover;
+     background-size: 100% 100%;
+     height: 100%;
      float: left;
      padding: 10px 15px;
      max-width: 450px;
