--- a/css/default.css
+++ b/css/default.css
@@ -2,18 +2,8 @@
 	font-family: 'War_Zone_97';
 	src:url('../fonts/War_Zone_97.eot');
 	src:url('../fonts/War_Zone_97.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/War_Zone_97.svg#War_Zone_97') format('svg'),		
-		url('../fonts/War_Zone_97.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Knight2';
-	src:url('../fonts/Knight2.eot');
-	src:url('../fonts/Knight2.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Knight2.svg#Knight2') format('svg'),		
-		url('../fonts/Knight2.ttf') format('truetype');
+		url('../fonts/War_Zone_97.svg#War_Zone_97') format('svg');		
+		/*url('../fonts/War_Zone_97.ttf') format('truetype');*/
 	font-weight: normal;
 	font-style: normal;
 }
@@ -25,7 +15,8 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:before, .clearfix:after { content: " "; display: table; }
 .clearfix:after { clear: both; }
 
-body {  
+body {
+    /*font-family: 'Lato', Calibri, Arial, sans-serif;*/
     font-family: 'War_Zone_97', cursive;
     font-size: small;
     font-weight: bold;
