Agregando bordes redondeados

--- a/css/component.css
+++ b/css/component.css
@@ -263,10 +263,23 @@ h3{
      max-width: 450px;
 }
 .contenido_empresa{
-     background-image: url(../images/fondoFormulario.png);
+     /*background-image: url(../images/fondoFormulario.png);*/ 
+     background-color: #f9f5f1;
      background-repeat: no-repeat;
-     background-size: cover;
-     padding: 10px 15px;    
+     background-size: cover;  
+     /* para IE */
+     behavior:url(border.htc);
+     /* para Opera */
+     border-radius: 15px 15px 15px 15px;   
+     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4); 
+     color: rgb(90, 89, 89);
+     text-align: justify;
+     padding: 10px 15px;      
+     /*para Firefox*/
+    -moz-border-radius: 15px 15px 15px 15px;
+    /*para Safari y Chrome*/
+    -webkit-border-radius: 15px 15px 15px 15px;
+   
 }
 #img{
     width: 325px;
