--- a/css/component.css
+++ b/css/component.css
@@ -48,6 +48,20 @@ header{
     float: left;
 }
 
+#contenido_dialog{
+     /* para IE */
+     behavior:url(border.htc);
+     /* para Opera */
+     border-radius: 15px 15px 15px 15px;   
+     box-shadow: -1px 4px 4px rgb(0, 0, 0);    
+     text-align: justify;
+     padding: 10px 15px;      
+     /*para Firefox*/
+    -moz-border-radius: 15px 15px 15px 15px;
+    /*para Safari y Chrome*/
+    -webkit-border-radius: 15px 15px 15px 15px;
+}
+
 #btn_cerrar_dialogo {
     margin: 15px;
 }
@@ -271,7 +285,7 @@ h3{
      behavior:url(border.htc);
      /* para Opera */
      border-radius: 15px 15px 15px 15px;   
-     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4); 
+     box-shadow: -1px 4px 4px rgb(0, 0, 0); 
      color: rgb(90, 89, 89);
      text-align: justify;
      padding: 10px 15px;      
