--- a/css/component.css
+++ b/css/component.css
@@ -48,20 +48,6 @@ header{
     float: left;
 }
 
-#contenido_dialog{
-     /* para IE */
-     behavior:url(border.htc);
-     /* para Opera */
-     border-radius: 15px 15px 15px 15px;   
-     box-shadow: -1px 4px 4px rgb(0, 0, 0);    
-     text-align: justify;
-     padding: 10px 15px;      
-     /*para Firefox*/
-    -moz-border-radius: 15px 15px 15px 15px;
-    /*para Safari y Chrome*/
-    -webkit-border-radius: 15px 15px 15px 15px;
-}
-
 #btn_cerrar_dialogo {
     margin: 15px;
 }
@@ -251,6 +237,14 @@ img{
     background-image: url(../images/patron_rojo.jpg);
 }
 
+.btn_galeria{
+    height: 64px;
+    position: absolute;
+    margin-left: 60px;   
+    width: 193px;
+    background-image: url(../images/verperfil.png);
+}
+
 #imagen_centrada{
     margin: 0 auto;  
 }
@@ -285,7 +279,7 @@ h3{
      behavior:url(border.htc);
      /* para Opera */
      border-radius: 15px 15px 15px 15px;   
-     box-shadow: -1px 4px 4px rgb(0, 0, 0); 
+     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4); 
      color: rgb(90, 89, 89);
      text-align: justify;
      padding: 10px 15px;      
