Arreglando el formulario de contacto

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -28,6 +28,10 @@ body {
     text-align: center;
 }
 
+#datos_contacto p{   
+   color: rgb(224, 214, 214);
+}
+
 
 #formulario {
     margin-top: -10px;
