Agregando Paginas en construccion

--- a/css/component.css
+++ b/css/component.css
@@ -334,3 +334,9 @@ footer{
     width: 800px;
     height: 350px;
 }
+
+/* GALERIA */
+#construccion{   
+    margin: 150px auto;
+    width: 400px;    
+}
