--- a/css/component.css
+++ b/css/component.css
@@ -370,7 +370,19 @@ footer{
 #caja_galeria > div{  
     display:-webkit-box;
     height: 100px;
-    min-width: 150px;
+    min-width: 125px;
     text-decoration: none;
     float: left;
+}
+.contenedor_btn_galeria{
+    height: 100px;   
+    background-image: url(../images/galeria/btn_galeria.png);   
+    padding: 0 30px;
+}
+.contenedor_btn_galeria a{
+     font-size: 18px;
+    padding: 10px 10px;
+}
+.contenedor_btn_galeria:hover{
+     background-position: right; 
 }
